fixing text overflow on buttons in mobile view

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -724,7 +724,7 @@ form .btn{
     .btn{
         height: 5.5vw;
         width: 25vw;
-        font-size: 2.2vw;
+        font-size: 1.5vw;
     }
 
     /*ABOUT*/
